--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,19 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=180000
 spring.datasource.hikari.maximum-pool-size=10
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 
 server.error.include-stacktrace=never
+
+jwt.expirationMs=36000000
+jwt.secret=qqaaadsasdsdsdsdswwe
+logging.level.org.springframework.security=DEBUG
+
