--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.maximum-pool-size=10
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=fa021910
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
@@ -16,6 +16,7 @@ spring.jpa.show-sql=true
 
 server.error.include-stacktrace=never
 
+jwt.refreshExpirationMs=360000000
 jwt.expirationMs=36000000
 jwt.secret=qqaaadsasdsdsdsdswwe
 logging.level.org.springframework.security=DEBUG
